# ComputationalGraphics

./: README.md
AR/: README.md
AR/vuforia/licenses/: license_3rdpartynotice.txt
AR/vuforia/samples/VuforiaSamples-8-3-8/: local.properties
AR/vuforia/samples/VuforiaSamples-8-3-8/app/: build.gradle
AR/vuforia/samples/VuforiaSamples-8-3-8/app/src/main/assets/CloudReco/: CR_about.html
AR/vuforia/samples/VuforiaSamples-8-3-8/app/src/main/assets/GroundPlane/: GP_about.html
AR/vuforia/samples/VuforiaSamples-8-3-8/app/src/main/assets/ModelTargets/: MD_about.html  VuforiaMars_ModelTarget360.xml
AR/vuforia/samples/VuforiaSamples-8-3-8/app/src/main/assets/MultiTargets/: MT_about.html
AR/vuforia/samples/VuforiaSamples-8-3-8/app/src/main/assets/ObjectRecognition/: joy_OT.xml
AR/vuforia/samples/VuforiaSamples-8-3-8/app/src/main/assets/UserDefinedTargets/: UD_about.html
AR/vuforia/samples/VuforiaSamples-8-3-8/gradle/wrapper/: gradle-wrapper.properties
GNMethod/: CMakeLists.txt  README.md  ResidualFunctionxxxx.cpp  ResidualFunctionxxxx.h  Solverxxxx.cpp  Solverxxxx.h  hw3_gn.h  main.cpp
GSMethod/: CMakeLists.txt  GaussSeidel.h  MySparseMatrix.h  README.md  main.cpp
ImageColorization/: README.md  colorization.ipynb  datasets.py  demo.py  model.py  utils.py
ImageColorization/data/model/: color.pth
ImageCompletion/: completion.ipynb  config.json  demo.py  model.py
ImageFilters/: CMakeLists.txt  README.md  main.cpp
Panorama/: CMakeLists.txt  README.md  hw6_pa.h  main.cpp  my_pa.cpp  my_pa.h
(+30 files in other folders)
